--- a/myproject/package.json
+++ b/myproject/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "myproject",
+  "name": "your-project-name",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node app/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2"
+    "flask": "^1.1.2",
+    "pytest": "^6.0.1"
   }
 }
+
